Cache not being reset when changing simulation settings with new depsgraph #50938

Closed
opened 2017-03-14 01:41:28 +01:00 by Luca Rood · 4 comments
Member

When simulating something with alt-a, a temporary cache is made. Now if a simulation setting is changed, this cache is supposed to be reset, however, that is not happening with the new depsgraph. I have noticed this behavior with both cloth and soft body.

To reproduce, open the provided file with the new depsgraph enabled (or just add a cloth/soft body sim to a cube or something...), press alt-a to simulate a bit, and then change any simulation setting. Notice that the invalid cache now wrongly remains.
cloth_deps.blend

Btw, this is caused by BKE_ptcache_object_reset not being called anywhere in the new depsgraph. I looked a bit into it, but I'm not familiar with the depsgraph code, and I didn't want to spend too much time figuring out where this should be called, so I leave it to you @Sergey ;)

When simulating something with alt-a, a temporary cache is made. Now if a simulation setting is changed, this cache is supposed to be reset, however, that is not happening with the new depsgraph. I have noticed this behavior with both cloth and soft body. To reproduce, open the provided file with the new depsgraph enabled (or just add a cloth/soft body sim to a cube or something...), press alt-a to simulate a bit, and then change any simulation setting. Notice that the invalid cache now wrongly remains. [cloth_deps.blend](https://archive.blender.org/developer/F508710/cloth_deps.blend) Btw, this is caused by `BKE_ptcache_object_reset` not being called anywhere in the new depsgraph. I looked a bit into it, but I'm not familiar with the depsgraph code, and I didn't want to spend too much time figuring out where this should be called, so I leave it to you @Sergey ;)
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscribers: @Sergey, @LucaRood-3

Added subscribers: @Sergey, @LucaRood-3
Sergey Sharybin was assigned by Luca Rood 2017-03-14 01:41:59 +01:00

This issue was referenced by 9ad252d157

This issue was referenced by 9ad252d157a209e8ba7160e1974690a811fd505f

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#50938
No description provided.